--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+img{
+    max-height: 100%;
+}
+
 input,
 textarea {
     @apply border-2 border-blue-900 rounded-md px-2 w-full;
